--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
 
 <body>
+    <div class="jumbotron bg-dark text-white">
+        <h1 class="text-center">Weather Dashboard</h1>
+    </div>
 
+    <div class="row">
+        <div class="card col-md-3">
+            <h3 class="card-header">Search for a City:</h3>
+            <form id="user-form" class="card-body">
+                <input type="text" class="inputValue" />
+                <button type="submit" class="btn btn-primary"><i class="fas fa-search"style="color: white;"></i></button>
+            </form>
+        </div>
+    </div>
+
+    <script src="./assets/js/style.js"></script>
 </body>
 
 </html>
