fetching 5 day forecast

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="row card-deck">
-        <div class="card col-md-3">
+        <div class="card col-md-2">
             <h3 class="card-header">Search for a City:</h3>
             <form id="user-form" class="card-body">
                 <input type="text" id="cityInput" value="" />
@@ -37,12 +37,9 @@
         </div>
     </div>
 
-    <div class="row justify-content-end">
-        <div class="card col-md-9">
-            <div class="card-body">
-                <h5>5 Day Forecast</h5>
-            </div>
-        </div>
+    <!--5 day forecast card-->
+    <div class="card-deck row justify-content-center" id="forecastDisplay">
+        <h3>5-Day Forecast</h3>
     </div>
 
 
