--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="card col-md-9">
             <div class="card-body display">
                 <h3 class="cityName"></h3>
+                <p class="weatherIcon"></p>
                 <p class="cityTemp"></p>
                 <p class="cityHumid"></p>
                 <p class="cityWind"></p>
@@ -38,9 +39,10 @@
     </div>
 
     <!--5 day forecast card-->
-    <div class="card-deck row justify-content-center" id="forecastDisplay">
-        <h3>5-Day Forecast</h3>
-    </div>
+
+    <h3 class="text-center">5-Day Forecast</h3>
+        <div class="card-deck row justify-content-center" id="forecastDisplay">
+        </div>
 
 
     <script src="./assets/js/script.js"></script>
